<resources>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="retail_toolbar_title">Retailers</string>
    <string name="farmer_toolbar_title">Farmer</string>
    <string name="organization_toolbar_title">Organization</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="tieme_endo">Tieme Endo</string>
    <string name="loading">Loading</string>
    <string name="transactions">Transactions</string>
    <string name="amount">Amount</string>
    <string name="mode">Mode</string>
    <string name="date">Date</string>
    <string name="officer">Officer</string>
    <string name="installments">Installments</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="mode">Mode</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="payment_date">Payment Date</string>
    <string name="add_payment">Add Payment</string>
    <string name="save_farmer">Save Farmer</string>
    <string name="retailers">Retailers</string>
    <string name="organizations">Organizations</string>
    <string name="farmers">Farmers</string>
    <string name="search">Search</string>
    <string name="inventory">Inventory</string>
</resources>
